third_party/move/move-compiler-v2/tests/lambda/inline-parity/nested_lambda_module.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test1 {
    public fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
} // end 0x42::Test1
module 0x42::Test {
    use 0x42::Test1; // resolved as: 0x42::Test1
    public fun test(): u64 {
        Test1::apply(closure#0Test::test$lambda$1(), 1, Test1::apply(closure#0Test::test$lambda$2(), 2, 1))
    }
    private fun test$lambda$1(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun test$lambda$2(x: u64,y: u64): u64 {
        Mul<u64>(x, y)
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test1 {
    public fun apply(f: |(u64, u64)|u64, x: u64, y: u64): u64 {
        f(x, y)
    }
}
module 0x42::Test {
    use 0x42::Test1;
    public fun test(): u64 {
        Test1::apply(|(arg0,arg1)| test$lambda$1(arg0, arg1), 1, Test1::apply(|(arg0,arg1)| test$lambda$2(arg0, arg1), 2, 1))
    }
    fun test$lambda$1(x: u64, y: u64): u64 {
        x + y
    }
    fun test$lambda$2(x: u64, y: u64): u64 {
        x * y
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/nested_lambda_module.move:4:9
  │
4 │         f(x, y)
  │         ^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/nested_lambda_module.move:13:22
   │
13 │         Test1::apply(|x, y| x + y, 1, Test1::apply(|x, y| x * y, 2, 1))
   │                      ^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/nested_lambda_module.move:13:52
   │
13 │         Test1::apply(|x, y| x + y, 1, Test1::apply(|x, y| x * y, 2, 1))
   │                                                    ^^^^^^^^^^^^
